# oneiros

./: .cargo-crap.toml  .gitignore  .gitmessage  .oxlintrc.json  .prettierignore  .prettierrc.json  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  TAGGING_WORKFLOW_ANALYSIS.md  dist-workspace.toml  lcov.info  package.json  pnpm-lock.yaml  release-plz.toml
crates/oneiros/: CHANGELOG.md  Cargo.toml
crates/oneiros-cli/: CHANGELOG.md  Cargo.toml
crates/oneiros-cli/src/: gauge.rs  lib.rs  prefix_id.rs
crates/oneiros-cli/src/cli/: mod.rs  output_format.rs
crates/oneiros-cli/src/commands/: doctor.rs  dream.rs  emerge.rs  guidebook.rs  introspect.rs  mod.rs  pressure.rs  recede.rs  reflect.rs  search.rs  sense.rs  sleep.rs  status.rs  wake.rs
crates/oneiros-cli/tests/integration/: commands.rs  levels.rs  main.rs
crates/oneiros-client/: CHANGELOG.md  Cargo.toml
crates/oneiros-client/src/: client.rs  error.rs  http_client.rs  lib.rs  requests.rs  socket.rs  types.rs
crates/oneiros-client/src/service/: client.rs  mod.rs
crates/oneiros-config/: CHANGELOG.md  Cargo.toml
crates/oneiros-config/src/: lib.rs
crates/oneiros-context/: CHANGELOG.md  Cargo.toml
crates/oneiros-context/src/: lib.rs
crates/oneiros-db/: CHANGELOG.md  Cargo.toml
crates/oneiros-db/migrations/: brain.sql  system.sql
crates/oneiros-db/src/: database.rs  error.rs  lib.rs  migrations.rs  projections.rs
crates/oneiros-detect-project-name/: Cargo.toml
crates/oneiros-detect-project-name/src/: detection_strategy.rs  directory.rs  git.rs  lib.rs  package.rs  project_detector.rs  project_root.rs  workspace.rs
crates/oneiros-engine/: CHANGELOG.md  Cargo.toml  clippy.toml
crates/oneiros-engine/src/: cli.rs  client.rs  config.rs  constants.rs  db.rs  docs.rs  engine.rs  error.rs  event_bus.rs  event_log.rs  events.rs  http.rs  keys.rs  lib.rs  mailbox.rs  mcp.rs  mcp_support.rs  migrations.rs  projections.rs  reducers.rs  requests.rs  response.rs  responses.rs  scope.rs  server.rs  skill.rs  streams.rs  tests.rs
crates/oneiros-engine/src/actors/: mod.rs  projector.rs
crates/oneiros-engine/src/bus/: bookmark_actor.rs  host_actor.rs  inbound_actor.rs  mailbox.rs  mod.rs  project_actor.rs
crates/oneiros-engine/src/contexts/: engine.rs  mod.rs  project.rs  system.rs
crates/oneiros-engine/src/domains/: mod.rs  skills.rs
crates/oneiros-engine/templates/: hints.md
crates/oneiros-engine/tests/: auth.rs  storage_transport.rs
crates/oneiros-http/: CHANGELOG.md  Cargo.toml
crates/oneiros-http/src/: error.rs  extractors.rs  lib.rs  mcp_session.rs  oneiros_context.rs  routes.rs
crates/oneiros-http/tests/: activity_handler.rs  agent_handler.rs  brain_handler.rs  connection_handler.rs  dashboard_handler.rs  event_handler.rs  experience_handler.rs  memory_handler.rs  nature_handler.rs  persona_handler.rs  search_handler.rs  sensation_handler.rs  sense_handler.rs  texture_handler.rs
crates/oneiros-link/: Cargo.toml
crates/oneiros-link/src/: addressable.rs  as_link.rs  domain_link.rs  error.rs  key.rs  lib.rs  link.rs  linkable.rs
crates/oneiros-link/tests/: link_tests.rs
crates/oneiros-mcp/: CHANGELOG.md  Cargo.toml
crates/oneiros-mcp/src/: lib.rs
crates/oneiros-model/: CHANGELOG.md  Cargo.toml
crates/oneiros-model/src/: error.rs  events.rs  identity.rs  lib.rs  models.rs  projections.rs  record.rs  values.rs
crates/oneiros-model/tests/: addressable_tests.rs  wrapper_tests.rs
crates/oneiros-outcomes/: Cargo.toml  README.md
crates/oneiros-outcomes-derive/: Cargo.toml
crates/oneiros-outcomes-derive/src/: codegen.rs  lib.rs  parse.rs
crates/oneiros-outcomes/src/: lib.rs  outcomes.rs  reportable.rs  reportable_metadata.rs  reporter.rs  tests.rs
crates/oneiros-protocol/: CHANGELOG.md  Cargo.toml
crates/oneiros-protocol/src/: actor.rs  agent.rs  brain.rs  cognition.rs  dreaming.rs  events.rs  experience.rs  introspecting.rs  level.rs  lib.rs  memory.rs  persona.rs  reflecting.rs  requests.rs  responses.rs  sensation.rs  sensing.rs  storage.rs  tenant.rs  texture.rs  ticket.rs
crates/oneiros-resource-poc/: Cargo.toml
crates/oneiros-resource-poc/src/: app.rs  cli.rs  effects.rs  http.rs  http_level.rs  http_scope.rs  lib.rs  mcp.rs  mount.rs  project_scope.rs  projections.rs  resource_agent.rs  resource_level.rs  service_state.rs  tests.rs
crates/oneiros-service/: CHANGELOG.md  Cargo.toml
crates/oneiros-service/src/: brain_service.rs  dispatch.rs  dream_collector.rs  error.rs  extractors.rs  lib.rs  projections.rs  replay.rs  routes.rs  state.rs  system_service.rs
crates/oneiros-service/templates/: dashboard.html
crates/oneiros-service/tests/: activity_handler.rs  agent_handler.rs  brain_handler.rs  cognition_handler.rs  connection_handler.rs  dashboard_handler.rs  dream_handler.rs  experience_handler.rs  level_handler.rs  link_projection_tests.rs  memory_handler.rs  nature_handler.rs  persona_handler.rs  search_handler.rs  sensation_handler.rs  sense_handler.rs  storage_handler.rs  texture_handler.rs
crates/oneiros-templates/: CHANGELOG.md  Cargo.toml
crates/oneiros-templates/src/: dream.rs  guidebook.rs  introspect.rs  lib.rs  mcp.rs  reflect.rs  sense.rs
crates/oneiros-templates/templates/: dream.md  guidebook.md  introspect.md  mcp.txt  reflect.md  sense.md
crates/oneiros-terminal/: CHANGELOG.md  Cargo.toml
crates/oneiros-terminal/src/: lib.rs
crates/oneiros-trust/: Cargo.toml
crates/oneiros-trust/src/: acme.rs  ca.rs  error.rs  lib.rs  mode.rs  peers.rs  provider.rs  trust_store.rs  types.rs
crates/oneiros-trust/tests/: tls_handshake.rs
crates/oneiros/src/: context.rs  database.rs  error.rs  gauge.rs  lib.rs  logging.rs  main.rs  outcomes.rs  prefix_id.rs  values.rs
crates/oneiros/src/cli/: full.rs  (+10 more)
research/oneiros-actor-poc/: CHANGELOG.md  Cargo.toml
research/oneiros-actor-poc/src/: agent.rs  cli.rs  config.rs  database.rs  lib.rs  mcp.rs  registry.rs  tests.rs
research/oneiros-ducks-poc/: CHANGELOG.md  Cargo.toml
research/oneiros-ducks-poc/src/: lib.rs  ports.rs  tests.rs
tests/usage/: CHANGELOG.md  Cargo.toml
tests/usage/src/: lib.rs
(+2008 files in other folders)
