[workspace]
resolver = "2"
members = [
  "crates/*",
]

[workspace.package]
version = "0.0.6"
edition = "2024"
repository = "https://github.com/esmevane/oneiros"
license = "MIT"

[workspace.dependencies]
anstream = "0.6.21"
askama = "0.15"
axum = "0.8.8"
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
bytes = "1.11"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "3"
colorchoice-clap = "1.0.7"
data-encoding = "2"
directories = "5"
flate2 = "1"
http-body-util = "0.1.3"
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
inquire = "0.7"
oneiros-client = { path = "crates/oneiros-client", version = "0.0.6" }
oneiros-config = { path = "crates/oneiros-config", version = "0.0.6" }
oneiros-context = { path = "crates/oneiros-context", version = "0.0.6" }
oneiros-db = { path = "crates/oneiros-db", version = "0.0.6" }
oneiros-detect-project-name = { path = "crates/oneiros-detect-project-name", version = "0.0.6" }
oneiros-fs = { path = "crates/oneiros-fs", version = "0.0.6" }
oneiros-model = { path = "crates/oneiros-model", version = "0.0.6" }
oneiros-outcomes = { path = "crates/oneiros-outcomes", version = "0.0.6" }
oneiros-outcomes-derive = { path = "crates/oneiros-outcomes-derive", version = "0.0.6" }
oneiros-http = { path = "crates/oneiros-http", version = "0.0.6" }
oneiros-service = { path = "crates/oneiros-service", version = "0.0.6" }
oneiros-trust = { path = "crates/oneiros-trust", version = "0.0.6" }
oneiros-skill = { path = "crates/oneiros-skill", version = "0.0.6" }
oneiros-templates = { path = "crates/oneiros-templates", version = "0.0.6" }
oneiros-terminal = { path = "crates/oneiros-terminal", version = "0.0.6" }
postcard = { version = "1", features = ["alloc"] }
pretty_assertions = "1"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
rcgen = { version = "0.14", features = ["ring", "pem"] }
ring = "0.17"
rusqlite = { version = "0.31", features = [
  "bundled",
  "functions",
  "serde_json",
  "uuid"
] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pki-types = "1"
rustls-pemfile = "2"
webpki-roots = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
service-manager = "0.10"
sha2 = "0.10"
syn = { version = "2", features = ["extra-traits", "full", "parsing"] }
tempfile = "3"
time = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
tokio-rustls-acme = "0.9"
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trybuild = "1"
urlencoding = "2.1"
uuid = { version = "1", features = ["serde", "v4", "v7"] }
whoami = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
