[workspace]
resolver = "2"
members = [
  "crates/*",
  "xtasks",
]

[workspace.package]
version = "0.0.9"
edition = "2024"
repository = "https://github.com/esmevane/oneiros"
license = "MIT"

[workspace.dependencies]
anstream = "1.0.0"
anstyle = "1"
askama = "0.15"
aide = { version = "0.16.0-alpha.4", features = ["axum", "axum-json", "axum-query", "macros", "scalar"] }
axum = "0.8.8"
bon = "3.8"
# bytes = "1.11"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
# clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
#   "tracing", "serde"
# ] }
data-encoding = "2"
# directories = "5"
etcetera = "0.11.0"
flate2 = "1"
futures = "0.3"
inquire = "0.9.4"
iroh = "0.97"
kinded = "0.5.0"
oneiros-engine = { path = "crates/oneiros-engine", version = "0.0.9" }
postcard = { version = "1", features = ["alloc"] }
pretty_assertions = "1"
rand = "0.9"
reqwest = { version = "0.13", features = ["json", "stream"] }
rmcp = { version = "1.1.1", features = [
  "server",
  "transport-streamable-http-server"
] }
rusqlite = { version = "0.31", features = [
  "bundled",
  "functions",
  "serde_json",
  "uuid"
] }
schemars = { version = "1.0", features = ["chrono04", "uuid1"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
service-manager = "0.10"
sha2 = "0.10"
shlex = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tower = { version = "0.5.3", features = ["util"] }
# tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# trybuild = "1"
# urlencoding = "2.1"
uuid = { version = "1", features = ["serde", "v4", "v7"] }
# whoami = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
