[package]
name = "oneiros-cli"
version.workspace = true
edition.workspace = true
description = "The CLI layer for Oneiros"
repository.workspace = true
license.workspace = true

[dependencies]
bon.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
colorchoice-clap.workspace = true
directories.workspace = true
oneiros-client.workspace = true
oneiros-context.workspace = true
oneiros-db.workspace = true
oneiros-http.workspace = true
oneiros-model.workspace = true
oneiros-outcomes.workspace = true
oneiros-service.workspace = true
oneiros-skill.workspace = true
oneiros-templates.workspace = true
serde.workspace = true
serde_json.workspace = true
service-manager.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
oneiros-config.workspace = true
oneiros-context.workspace = true
oneiros-detect-project-name.workspace = true
oneiros-http.workspace = true
tempfile.workspace = true
tokio.workspace = true
