[package]
name = "oneiros-client"
version.workspace = true
edition.workspace = true
description = "A socket-based http client for oneiros services"
repository.workspace = true
license.workspace = true

[dependencies]
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
oneiros-model.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
