[package]
name = "oneiros-db"
version.workspace = true
edition.workspace = true
description = "Strategy-based project root and name detection for oneiros."
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
