[package]
name = "oneiros-db"
version.workspace = true
edition.workspace = true
description = "Sqlite powered database IO for oneiros' persistence layer"
repository.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
oneiros-model.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
