[package]
name = "oneiros-detect-project-name"
version.workspace = true
edition.workspace = true
description = "Strategy-based project root and name detection for oneiros."
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
