[package]
name = "oneiros-engine"
version.workspace = true
edition.workspace = true
description = "The engine underlying oneiros' CLI"
repository.workspace = true
license.workspace = true

[dependencies]
aide.workspace = true
anstream.workspace = true
anstyle.workspace = true
askama.workspace = true
axum.workspace = true
bon.workspace = true
chrono.workspace = true
clap.workspace = true
data-encoding.workspace = true
etcetera.workspace = true
flate2.workspace = true
inquire.workspace = true
iroh.workspace = true
kinded.workspace = true
loro.workspace = true
lorosurgeon.workspace = true
postcard.workspace = true
rand.workspace = true
reqwest.workspace = true
rmcp.workspace = true
rusqlite.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
service-manager.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
tower.workspace = true
uuid.workspace = true

[dev-dependencies]
futures.workspace = true
pretty_assertions.workspace = true
shlex.workspace = true
tempfile.workspace = true
tokio.workspace = true

# [lints.clippy]
# nursery = { level = "deny", priority = -1 }
# pedantic = { level = "deny", priority = -1 }
# unwrap_used = "deny"
