[package]
name = "oneiros-engine"
version.workspace = true
edition.workspace = true
description = "The engine underlying oneiros' CLI"
repository.workspace = true
license.workspace = true

[dependencies]
aide.workspace = true
anstream.workspace = true
anstyle.workspace = true
askama.workspace = true
axum.workspace = true
bon.workspace = true
chrono.workspace = true
clap.workspace = true
data-encoding.workspace = true
der.workspace = true
etcetera.workspace = true
figment.workspace = true
flate2.workspace = true
hmac.workspace = true
http-body-util.workspace = true
humantime.workspace = true
humantime-serde.workspace = true
inquire.workspace = true
iroh.workspace = true
kinded.workspace = true
mime_guess.workspace = true
paste.workspace = true
pkcs8.workspace = true
postcard.workspace = true
reqwest.workspace = true
rmcp.workspace = true
rusqlite.workspace = true
rust-embed.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
service-manager.workspace = true
sha2.workspace = true
spki.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
futures.workspace = true
pretty_assertions.workspace = true
shlex.workspace = true
tokio.workspace = true

[lints.clippy]
# nursery = { level = "deny", priority = -1 }
# pedantic = { level = "deny", priority = -1 }
# unwrap_used = "deny"
