[package]
name = "oneiros-http"
version.workspace = true
edition.workspace = true
description = "HTTP bindings for the oneiros service layer"
repository.workspace = true
license.workspace = true

[dependencies]
askama.workspace = true
axum.workspace = true
oneiros-db.workspace = true
oneiros-model.workspace = true
oneiros-service.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
http-body-util.workspace = true
oneiros-client.workspace = true
oneiros-fs.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
tower.workspace = true
