[package]
name = "oneiros-link"
version.workspace = true
edition.workspace = true
description = "Content-addressable linking primitives for oneiros"
repository.workspace = true
license.workspace = true

[dependencies]
data-encoding.workspace = true
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
