[package]
name = "oneiros-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server adapter for oneiros"
repository.workspace = true
license.workspace = true

[dependencies]
oneiros-db.workspace = true
oneiros-model.workspace = true
oneiros-service.workspace = true
rmcp.workspace = true
serde_json.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
