[package]
name = "oneiros-model"
version.workspace = true
edition.workspace = true
description = "Shared domain types for oneiros"
repository.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
data-encoding.workspace = true
postcard.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
