[package]
name = "oneiros-model"
version.workspace = true
edition.workspace = true
description = "Shared domain types for oneiros"
repository.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
data-encoding.workspace = true
oneiros-link.workspace = true
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
