[package]
name = "oneiros-outcomes-derive"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
oneiros-outcomes = { path = "../oneiros-outcomes" }
pretty_assertions.workspace = true
prettyplease.workspace = true
tracing.workspace = true
trybuild.workspace = true
