[package]
name = "oneiros-outcomes"
version.workspace = true
edition.workspace = true
description = "Feedback primitives for logging and terminal targets"
repository.workspace = true
license.workspace = true

[dependencies]
oneiros-outcomes-derive.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
