[package]
name = "oneiros-service"
version.workspace = true
edition.workspace = true
description = "Provides resource interactions for the database layer via http"
repository.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
data-encoding.workspace = true
flate2.workspace = true
oneiros-db.workspace = true
oneiros-fs.workspace = true
oneiros-model.workspace = true
oneiros-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
http-body-util.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
tower.workspace = true
