[package]
name = "oneiros-service"
version.workspace = true
edition.workspace = true
description = "Domain services and projections for the oneiros event-sourced brain"
repository.workspace = true
license.workspace = true

[dependencies]
data-encoding.workspace = true
flate2.workspace = true
oneiros-db.workspace = true
oneiros-fs.workspace = true
oneiros-model.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
