[package]
name = "oneiros-templates"
version.workspace = true
edition.workspace = true
description = "Askama based templates for more complex oneiros prompts."
repository.workspace = true
license.workspace = true

[dependencies]
askama.workspace = true
oneiros-model.workspace = true

[dev-dependencies]
chrono.workspace = true
pretty_assertions.workspace = true
