[package]
name = "oneiros-terminal"
version.workspace = true
edition.workspace = true
description = "Wrapper for common oneiros terminal operations."
repository.workspace = true
license.workspace = true

[dependencies]
inquire.workspace = true
whoami.workspace = true

[dev-dependencies]
tempfile.workspace = true
