[package]
name = "oneiros"
version.workspace = true
edition.workspace = true
description = "A sqlite-based cognition kit for long-term agent language models."
repository.workspace = true
license.workspace = true

[package.metadata.dist]
dist = true

[[bin]]
name = "oneiros"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
colorchoice-clap.workspace = true
directories.workspace = true
oneiros-client.workspace = true
oneiros-db.workspace = true
oneiros-detect-project-name.workspace = true
oneiros-fs.workspace = true
oneiros-link.workspace = true
oneiros-model.workspace = true
oneiros-outcomes.workspace = true
oneiros-service.workspace = true
oneiros-skill.workspace = true
oneiros-templates.workspace = true
oneiros-terminal.workspace = true
serde.workspace = true
serde_json.workspace = true
service-manager.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
