[package]
name = "oneiros"
version.workspace = true
edition.workspace = true
description = "A sqlite-based cognition kit for long-term agent language models."
repository.workspace = true
license.workspace = true

[package.metadata.dist]
dist = true

[[bin]]
name = "oneiros"
path = "src/main.rs"

[dependencies]
clap.workspace = true
oneiros-engine.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
