[package]
name = "oneiros-usage"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
oneiros-engine = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
